# skinsim-dev

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  buildSkinSim.sh  drone.io  setup.bash
experimenter/: CMakeLists.txt  README.md
experimenter/config/: ctrSpecs.yaml  mdlSpecs.yaml  model_params.yaml
experimenter/src/: auto_calibrator.cpp  auto_experimenter.cc  auto_experimenter.cpp  auto_generator.cpp  generate_experiment_specification.cc  skinsim_experiment_generator.cc  skinsim_testing_framework.cc
generator/: CMakeLists.txt  README.md
generator/config/: model_params.yaml  model_params_spring_board.yaml
generator/include/SkinSim/: ModelBuilder.hh  ModelSpecYAML.hh  model_builder.h
generator/src/: model_builder.cpp  skin_model_generator.cc
model/: CMakeLists.txt  README.md  package.xml
model/config/: ctr_config.yaml  joint_names.yaml
model/models/box/: model.sdf
model/models/cylinder/: cylinder.sdf  model.config
model/models/fixed_box/: model.config
model/models/plunger/: model.config  plunger.sdf
model/models/plunger_ft_sensor/: model.config  plunger_ft_sensor.sdf
model/models/pr2_skin/: model.config  model.sdf  model_modified.sdf
model/models/robot_hand/: model.config  model.sdf
model/models/simple_cylinder/: model.config  simple_cylinder.sdf
model/models/simple_sphere/: model.config  (+1 more)
model/worlds/: cylinder_skinsim_model.world  fixed_skinsim_model.world  hand_skinsim_model.world  skin_patch_grid.world  skinsim_model.world  spring_array10.world  spring_array15.world  spring_array20.world  spring_array25.world  spring_array30.world  spring_array35.world  spring_array40.world  spring_array45.world  spring_array5.world  spring_array50.world  spring_array55.world  spring_array60.world  spring_array65.world  spring_array70.world  spring_board.world  spring_board10.world
model_generator/: CMakeLists.txt  README.md  package.xml
model_generator/config/: model_params.yaml
model_generator/launch/: model_generator.launch  only_skin_array_model_update.launch  spring_array_model_update.launch
model_generator/src/: only_skinmodel_sdf_generator.cpp  skinmodel_sdf_generator.cpp
moveit_setup_assistant/: CMakeLists.txt  package.xml
moveit_setup_assistant/src/: setup_assistant_main.cpp
msgs/: CMakeLists.txt  package.xml
msgs/msg/: conciseData.msg  controllerData.msg  tactileData.msg
plugins/: CMakeLists.txt
plugins/src/: CylinderTrajectoryPlugin.cc  MassValidJoint.cc  PlaneJoint.cc  SkinJointForceDistributionPlugin.cc  SkinJointPlugin.cc  SkinJointPlugin_V2.cc  VisualizeContactPlugin.cc  digitalFilter.cpp  plunger.cpp  skin_joint_gazebo_ros.cpp
skin_model/: CMakeLists.txt  README.md  package.xml
skin_model/config/: config.yaml
skin_model/launch/: fixed_skin_model.launch  hand_skin_model.launch  hinge_skin_model.launch  skin_model.launch
skin_model/src/: skin_joint.cc  spring_joint.cc
skin_model/worlds/: fixed_spring_array.world
skin_model_generator/: CMakeLists.txt  package.xml
skin_model_generator/config/: model_params.yaml
skin_model_generator/launch/: only_skin_array_model_update.launch  skin_model_generator.launch  skin_model_update.launch
skin_model_generator/src/: only_skinmodel_sdf_generator.cpp
skinsim_model/: CMakeLists.txt  README.md  package.xml
skinsim_model/config/: config.yaml  ctr_config.yaml  joint_names.yaml  pse_rand_ttl.yaml  tactile_cent_id.txt  tactile_id.txt
skinsim_model/launch/: fixed_skin_model.launch  hand_skin_model.launch  hinge_skin_model.launch  skin_model.launch
skinsim_model/src/: SkinJointPlugin.cc  TactileSensorPlugin.cc  central.cc  central.cpp  mass_joint.cc  mass_valid_joint.cc  plane_joint.cc  skin_joint.cc  spring_joint.cc  tactile_joint.cc
skinsim_model/worlds/: skinsim_model.world
skinsim_model_generator/: CMakeLists.txt  package.xml
skinsim_model_generator/config/: model_params.yaml
skinsim_model_generator/generated_models/: model.sdf
skinsim_model_generator/launch/: only_skin_array_model_update.launch  skin_auto_model_gen.launch  skin_model_generator.launch  skin_model_update.launch
skinsim_model_generator/src/: automatedTest.cc  only_skinmodel_sdf_generator.cc  skinmodel_sdf_generator.cc  skinmodel_sensor_resol.cc  skinmodel_sensor_resol.cpp
skinsim_msgs/: CMakeLists.txt  package.xml
skinsim_msgs/msg/: inputData.msg  tactileData.msg
skinsim_msgs/msgs/: tactileData.proto
skinsim_plugins/: CMakeLists.txt
skinsim_plugins/src/: MassJoint.cc  MassValidJoint.cc  PlaneJoint.cc  SkinJointPlugin.cc  TactileSensorPlugin.cc  mass_valid_joint.cc  plane_joint.cc  skin_tactile_joint.cc  yamlTest.cc
skinsim_ros/: CMakeLists.txt  package.xml
skinsim_ros/config/: skinArray.rviz
skinsim_ros/launch/: fixed_skin_model.launch  hand_skin_model.launch  hinge_skin_model.launch  rviz.launch  skin_auto_model_gen.launch  skin_model.launch
skinsim_ros_msgs/: CMakeLists.txt  README.md  package.xml
skinsim_ros_msgs/msg/: CenterOfPressure.msg  ControllerType.msg  FeedbackType.msg  ForceFeedback.msg  Joint1D.msg  Joint1DArray.msg  PlungerData.msg  SkinJointData.msg  SkinJointDataArray.msg  TactileData.msg
skinsim_ros_msgs/srv/: GetLayout.srv  GetPosition.srv  SetController.srv  SetPIDGains.srv
skinsim_test/: CMakeLists.txt  README.md
skinsim_test/config/: ctrSpecs.yaml
skinsim_test/src/: automatedTest.cc  genExpSpecs.cc
spring_array/: CMakeLists.txt  README.md  array.world  central.cc  joint_names.yaml  mass_joint.cc  mass_valid_joint.cc  package.xml  plane_joint.cc  skin_joint.cc  spring_joint.cc  tactile_joint.cc
spring_array/config/: config.yaml  joint_names.yaml
spring_array/data/: cycle_time_data.txt  cycle_time_different_no_of_sensors.mat  data121.txt  data25.txt  data81.txt  data9.txt  process.m
spring_array/launch/: fixed_spring_array.launch  hand_spring_array.launch  hinge_spring_array.launch  spring_array.launch
spring_array/msg/: controllerData.msg  tactileData.msg
spring_array/src/: central.cpp  plane_joint.cc
spring_array/worlds/: fixed_spring_array.world  hand_spring_array.world  hinge_spring_array.world  spring_array.world
(+135 files in other folders)
