<?xml version="1.0"?>
<package>
  <name>skin_model_generator</name>
  <version>0.0.0</version>
  <description>The model_generator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="isura@todo.todo">isura</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>

  <build_depend>pcl</build_depend>
  <run_depend>pcl</run_depend>
  
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
